--- a/MVC_Forum/resources/Controllers.HomeController.pl-PL.resx
+++ b/MVC_Forum/resources/Controllers.HomeController.pl-PL.resx
@@ -117,10 +117,28 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Użytkownicy" xml:space="preserve">
-    <value>Users</value>
+  <data name="Change Language" xml:space="preserve">
+    <value>Zmień język</value>
   </data>
-  <data name="Wyloguj" xml:space="preserve">
-    <value>Logout</value>
+  <data name="Friends" xml:space="preserve">
+    <value>Przyjaciele</value>
+  </data>
+  <data name="Home Page" xml:space="preserve">
+    <value>Strona Domowa</value>
+  </data>
+  <data name="Init" xml:space="preserve">
+    <value>Inicjalizacja</value>
+  </data>
+  <data name="LogIn" xml:space="preserve">
+    <value>Zaloguj</value>
+  </data>
+  <data name="Logout" xml:space="preserve">
+    <value>Wyloguj</value>
+  </data>
+  <data name="Users" xml:space="preserve">
+    <value>Użytkownicy</value>
+  </data>
+  <data name="Welcome" xml:space="preserve">
+    <value>Witaj</value>
   </data>
 </root>
